--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -10,148 +10,144 @@
     "import pandas as pd\n",
     "import calendar\n",
     "from datetime import datetime\n",
-    "from tkinter import Tk, filedialog\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output\n",
+    "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
     "import os\n",
     "\n",
     "# -------------------------\n",
     "# Step 1. File selection\n",
     "# -------------------------\n",
-    "Tk().withdraw()\n",
+    "root = Tk()\n",
+    "root.withdraw()  # hide root window\n",
+    "\n",
     "file_path = filedialog.askopenfilename(\n",
     "    title=\"Select ADWP Data File\",\n",
     "    filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
     ")\n",
-    "\n",
     "if not file_path:\n",
     "    raise SystemExit(\"❌ No file selected.\")\n",
-    "\n",
     "print(f\"Selected file: {file_path}\")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 2. Dropdowns for Year & Month\n",
-    "# -------------------------\n",
-    "current_year = datetime.today().year\n",
     "\n",
-    "year_dd = widgets.Dropdown(\n",
-    "    options=[current_year - 1, current_year, current_year + 1],\n",
-    "    value=current_year,\n",
-    "    description=\"Year:\"\n",
+    "# -------------------------\n",
+    "# Step 2. Custom dialog for Year & Month\n",
+    "# -------------------------\n",
+    "def ask_year_month():\n",
+    "    def on_ok():\n",
+    "        nonlocal selected_year, selected_month\n",
+    "        selected_year = year_var.get()\n",
+    "        selected_month = month_var.get()\n",
+    "        win.destroy()\n",
+    "\n",
+    "    win = Toplevel(root)\n",
+    "    win.title(\"Select Year and Month\")\n",
+    "\n",
+    "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
+    "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
+    "\n",
+    "    # Year dropdown\n",
+    "    current_year = datetime.today().year\n",
+    "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
+    "    year_var = StringVar(win)\n",
+    "    year_var.set(str(current_year))  # default\n",
+    "    year_menu = OptionMenu(win, year_var, *years)\n",
+    "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    # Month dropdown\n",
+    "    months = list(calendar.month_name)[1:]\n",
+    "    month_var = StringVar(win)\n",
+    "    month_var.set(calendar.month_name[datetime.today().month])  # default\n",
+    "    month_menu = OptionMenu(win, month_var, *months)\n",
+    "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
+    "\n",
+    "    win.wait_window()  # wait for user to close\n",
+    "    return int(selected_year), selected_month\n",
+    "\n",
+    "\n",
+    "selected_year, selected_month = ask_year_month()\n",
+    "print(f\"Selected: {selected_month} {selected_year}\")\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 3. Processing\n",
+    "# -------------------------\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
+    "\n",
+    "# Current selection\n",
+    "sel_year = selected_year\n",
+    "sel_month = list(calendar.month_name).index(selected_month)\n",
+    "curr_date = datetime(sel_year, sel_month, 1)\n",
+    "\n",
+    "# Horizon (24 months from Jan of selected year)\n",
+    "start_date = datetime(sel_year, 1, 1)\n",
+    "horizon = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
+    "month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
+    "\n",
+    "output_records = []\n",
+    "\n",
+    "def get_key(row):\n",
+    "    if pd.notna(row[\"PID\"]):\n",
+    "        return (\"PID\", row[\"PID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "    else:\n",
+    "        return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "\n",
+    "grouped = df.groupby(df.apply(get_key, axis=1))\n",
+    "\n",
+    "for key, group in grouped:\n",
+    "    kind = key[0]\n",
+    "    group = group.sort_values(\"Period Month\")\n",
+    "\n",
+    "    latest = group.iloc[-1]\n",
+    "    record = {\n",
+    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "        \"Country R1\": latest.get(\"Country R1\"),\n",
+    "        \"Country R2\": latest.get(\"Country R2\"),\n",
+    "        \"Country R3\": latest.get(\"Country R3\"),\n",
+    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "        \"GCB\": latest.get(\"GCB\"),\n",
+    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
+    "    }\n",
+    "\n",
+    "    for label in month_labels:\n",
+    "        record[label] = None\n",
+    "\n",
+    "    last_fte = None\n",
+    "    for month in month_labels:\n",
+    "        month_dt = datetime.strptime(month, \"%b-%y\")\n",
+    "        row = group[group[\"Period Month\"] == month_dt]\n",
+    "        if not row.empty:\n",
+    "            last_fte = row[\"FTE\"].iloc[0]\n",
+    "        if last_fte is not None:\n",
+    "            record[month] = last_fte\n",
+    "        if month_dt <= curr_date and record[month] is not None:\n",
+    "            record[\"FTE\"] = record[month]\n",
+    "\n",
+    "    output_records.append(record)\n",
+    "\n",
+    "out_df = pd.DataFrame(output_records)\n",
+    "\n",
+    "# Sort output\n",
+    "sort_cols = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
+    "]\n",
+    "out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
+    "\n",
+    "# Save\n",
+    "out_file = os.path.join(\n",
+    "    os.path.dirname(file_path),\n",
+    "    f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
     ")\n",
+    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
     "\n",
-    "month_dd = widgets.Dropdown(\n",
-    "    options=list(calendar.month_name)[1:],  # Jan..Dec\n",
-    "    value=calendar.month_name[datetime.today().month],\n",
-    "    description=\"Month:\"\n",
-    ")\n",
-    "\n",
-    "ok_button = widgets.Button(description=\"OK\", button_style=\"success\")\n",
-    "output_area = widgets.Output()\n",
-    "\n",
-    "display(widgets.VBox([year_dd, month_dd, ok_button, output_area]))\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 3. Processing function\n",
-    "# -------------------------\n",
-    "def process_adwp(b):\n",
-    "    with output_area:\n",
-    "        clear_output()\n",
-    "        \n",
-    "        # Read Excel\n",
-    "        df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
-    "        df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
-    "        \n",
-    "        # User selections\n",
-    "        sel_year = year_dd.value\n",
-    "        sel_month = list(calendar.month_name).index(month_dd.value)\n",
-    "        curr_date = datetime(sel_year, sel_month, 1)\n",
-    "        \n",
-    "        # 24-month horizon\n",
-    "        start_date = datetime(sel_year, 1, 1)\n",
-    "        horizon = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
-    "        month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
-    "        \n",
-    "        output_records = []\n",
-    "\n",
-    "        # Define position key (PID or MPP)\n",
-    "        def get_key(row):\n",
-    "            if pd.notna(row[\"PID\"]):\n",
-    "                return (\"PID\", row[\"PID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
-    "            else:\n",
-    "                return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
-    "\n",
-    "        grouped = df.groupby(df.apply(get_key, axis=1))\n",
-    "\n",
-    "        for key, group in grouped:\n",
-    "            kind = key[0]\n",
-    "            group = group.sort_values(\"Period Month\")\n",
-    "            \n",
-    "            # Prepare base record\n",
-    "            latest = group.iloc[-1]\n",
-    "            record = {\n",
-    "                \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
-    "                \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
-    "                \"Business Framework\": latest.get(\"Business Framework\"),\n",
-    "                \"Country R1\": latest.get(\"Country R1\"),\n",
-    "                \"Country R2\": latest.get(\"Country R2\"),\n",
-    "                \"Country R3\": latest.get(\"Country R3\"),\n",
-    "                \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
-    "                \"GCB\": latest.get(\"GCB\"),\n",
-    "                \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
-    "                \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
-    "            }\n",
-    "\n",
-    "            # Initialize all months to None\n",
-    "            for label in month_labels:\n",
-    "                record[label] = None\n",
-    "\n",
-    "            # Carry-forward logic\n",
-    "            last_fte = None\n",
-    "            for month in month_labels:\n",
-    "                month_dt = datetime.strptime(month, \"%b-%y\")\n",
-    "                # Check if group has FTE for this month\n",
-    "                row = group[group[\"Period Month\"] == month_dt]\n",
-    "                if not row.empty:\n",
-    "                    last_fte = row[\"FTE\"].iloc[0]\n",
-    "                # Fill FTE forward\n",
-    "                if last_fte is not None:\n",
-    "                    record[month] = last_fte\n",
-    "                # Mark FTE column as latest available <= current month\n",
-    "                if month_dt <= curr_date and record[month] is not None:\n",
-    "                    record[\"FTE\"] = record[month]\n",
-    "\n",
-    "            output_records.append(record)\n",
-    "\n",
-    "        # Build DataFrame\n",
-    "        out_df = pd.DataFrame(output_records)\n",
-    "\n",
-    "        # Sorting\n",
-    "        sort_cols = [\n",
-    "            \"Business Service L2\",\n",
-    "            \"Business Framework Group\",\n",
-    "            \"Business Framework\",\n",
-    "            \"Country R1\",\n",
-    "            \"Country R2\",\n",
-    "            \"Country R3\",\n",
-    "            \"PID\",\n",
-    "            \"MPP ID\",\n",
-    "            \"GCB\"\n",
-    "        ]\n",
-    "        out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
-    "\n",
-    "        # Save output\n",
-    "        out_file = os.path.join(\n",
-    "            os.path.dirname(file_path),\n",
-    "            f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
-    "        )\n",
-    "        with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
-    "            out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
-    "\n",
-    "        print(f\"✅ ADWP Output written to: {out_file}\")\n",
-    "        print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns)}\")\n",
-    "\n",
-    "ok_button.on_click(process_adwp)\n"
+    "print(f\"✅ ADWP Output written to: {out_file}\")\n",
+    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns)}\")\n"
    ]
   }
  ],
