--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -32,10 +32,11 @@
     "# Step 2. Custom dialog for Year & Month\n",
     "# -------------------------\n",
     "def ask_year_month():\n",
+    "    result = {\"year\": None, \"month\": None}\n",
+    "\n",
     "    def on_ok():\n",
-    "        nonlocal selected_year, selected_month\n",
-    "        selected_year = year_var.get()\n",
-    "        selected_month = month_var.get()\n",
+    "        result[\"year\"] = year_var.get()\n",
+    "        result[\"month\"] = month_var.get()\n",
     "        win.destroy()\n",
     "\n",
     "    win = Toplevel(root)\n",
@@ -62,7 +63,8 @@
     "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
     "\n",
     "    win.wait_window()  # wait for user to close\n",
-    "    return int(selected_year), selected_month\n",
+    "\n",
+    "    return int(result[\"year\"]), result[\"month\"]\n",
     "\n",
     "\n",
     "selected_year, selected_month = ask_year_month()\n",
@@ -72,6 +74,7 @@
     "# -------------------------\n",
     "# Step 3. Processing\n",
     "# -------------------------\n",
+    "print(\"⏳ Reading input file...\")\n",
     "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
     "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
     "\n",
@@ -93,6 +96,7 @@
     "    else:\n",
     "        return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
     "\n",
+    "print(\"⏳ Processing records...\")\n",
     "grouped = df.groupby(df.apply(get_key, axis=1))\n",
     "\n",
     "for key, group in grouped:\n",
@@ -113,6 +117,7 @@
     "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
     "    }\n",
     "\n",
+    "    # initialize horizon columns\n",
     "    for label in month_labels:\n",
     "        record[label] = None\n",
     "\n",
@@ -129,16 +134,17 @@
     "\n",
     "    output_records.append(record)\n",
     "\n",
+    "# Build DataFrame\n",
     "out_df = pd.DataFrame(output_records)\n",
     "\n",
-    "# Sort output\n",
+    "# Sorting\n",
     "sort_cols = [\n",
     "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
     "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
     "]\n",
     "out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
-    "# Save\n",
+    "# Save output\n",
     "out_file = os.path.join(\n",
     "    os.path.dirname(file_path),\n",
     "    f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
