--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,6 +3,196 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4aeafdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import calendar\n",
+    "from datetime import datetime\n",
+    "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
+    "import os\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 1. File selection (Tk file picker)\n",
+    "# -------------------------\n",
+    "root = Tk()\n",
+    "root.withdraw()  # hide root window\n",
+    "\n",
+    "file_path = filedialog.askopenfilename(\n",
+    "    title=\"Select ADWP Data File\",\n",
+    "    filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
+    ")\n",
+    "if not file_path:\n",
+    "    raise SystemExit(\"❌ No file selected.\")\n",
+    "print(f\"Selected file: {file_path}\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 2. Year & Month dialog (returns year int, month name)\n",
+    "# -------------------------\n",
+    "def ask_year_month():\n",
+    "    result = {\"year\": None, \"month\": None}\n",
+    "\n",
+    "    def on_ok():\n",
+    "        result[\"year\"] = year_var.get()\n",
+    "        result[\"month\"] = month_var.get()\n",
+    "        win.destroy()\n",
+    "\n",
+    "    win = Toplevel(root)\n",
+    "    win.title(\"Select Year and Month\")\n",
+    "\n",
+    "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
+    "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
+    "\n",
+    "    # Year dropdown\n",
+    "    current_year = datetime.today().year\n",
+    "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
+    "    year_var = StringVar(win)\n",
+    "    year_var.set(str(current_year))  # default\n",
+    "    year_menu = OptionMenu(win, year_var, *years)\n",
+    "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    # Month dropdown\n",
+    "    months = list(calendar.month_name)[1:]\n",
+    "    month_var = StringVar(win)\n",
+    "    month_var.set(calendar.month_name[datetime.today().month])  # default\n",
+    "    month_menu = OptionMenu(win, month_var, *months)\n",
+    "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
+    "\n",
+    "    win.wait_window()  # wait for dialog to close\n",
+    "    return int(result[\"year\"]), result[\"month\"]\n",
+    "\n",
+    "selected_year, selected_month = ask_year_month()\n",
+    "print(f\"Selected: {selected_month} {selected_year}\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 3. Read & normalize input\n",
+    "# -------------------------\n",
+    "print(\"⏳ Reading input file...\")\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "\n",
+    "# normalize Period Month to first-of-month timestamps\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\").dt.to_timestamp()\n",
+    "\n",
+    "# ensure numeric FTE\n",
+    "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 4. Build 24-month horizon\n",
+    "# -------------------------\n",
+    "sel_year = selected_year\n",
+    "sel_month = list(calendar.month_name).index(selected_month)  # numeric month\n",
+    "curr_date = datetime(sel_year, sel_month, 1)\n",
+    "\n",
+    "start_date = datetime(sel_year, 1, 1)\n",
+    "horizon = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
+    "month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 5. Grouping and carry-forward logic\n",
+    "# -------------------------\n",
+    "output_records = []\n",
+    "\n",
+    "def get_key(row):\n",
+    "    \"\"\"Grouping key: prefer PID; otherwise use MPP ID. BF and GCB included.\"\"\"\n",
+    "    pid = row.get(\"PID\")\n",
+    "    mpp = row.get(\"MPP ID\")\n",
+    "    gcb = row.get(\"GCB\")\n",
+    "    bf = row.get(\"Business Framework\")\n",
+    "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
+    "        return (\"PID\", str(pid).strip(), str(gcb), str(bf))\n",
+    "    else:\n",
+    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb), str(bf))\n",
+    "\n",
+    "print(\"⏳ Processing records...\")\n",
+    "grouped = df.groupby(df.apply(get_key, axis=1))\n",
+    "\n",
+    "for key, group in grouped:\n",
+    "    # key: (\"PID\"/\"MPP\", id, GCB, BF)\n",
+    "    kind = key[0]\n",
+    "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
+    "\n",
+    "    latest = group.iloc[-1]\n",
+    "    record = {\n",
+    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "        \"Country R1\": latest.get(\"Country R1\"),\n",
+    "        \"Country R2\": latest.get(\"Country R2\"),\n",
+    "        \"Country R3\": latest.get(\"Country R3\"),\n",
+    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "        \"GCB\": latest.get(\"GCB\"),\n",
+    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
+    "    }\n",
+    "\n",
+    "    # initialize horizon months\n",
+    "    for label in month_labels:\n",
+    "        record[label] = None\n",
+    "\n",
+    "    # last_fte holds the most recent known FTE (can be negative, e.g., -1)\n",
+    "    last_fte = None\n",
+    "\n",
+    "    # iterate months in chronological horizon order\n",
+    "    for month_label in month_labels:\n",
+    "        month_dt = datetime.strptime(month_label, \"%b-%y\")\n",
+    "\n",
+    "        # find any records in this month (if multiple, take last by order)\n",
+    "        rows_in_month = group[group[\"Period Month\"] == month_dt]\n",
+    "        if not rows_in_month.empty:\n",
+    "            # use last record's FTE for that month\n",
+    "            val = rows_in_month[\"FTE\"].iloc[-1]\n",
+    "            # val may be NaN; treat numeric -1 as valid leaver marker\n",
+    "            if pd.isna(val):\n",
+    "                # keep last_fte as-is (no change)\n",
+    "                pass\n",
+    "            else:\n",
+    "                last_fte = val\n",
+    "\n",
+    "        # set monthly cell to last_fte if available (this will also set -1 if that's the last_fte)\n",
+    "        if last_fte is not None:\n",
+    "            record[month_label] = last_fte\n",
+    "        else:\n",
+    "            record[month_label] = None\n",
+    "\n",
+    "        # For snapshot FTE: set from last known fte seen up to and including selected month\n",
+    "        if month_dt <= curr_date:\n",
+    "            # Important: use last_fte (so -1 is preserved), not record[month_label] only\n",
+    "            record[\"FTE\"] = last_fte if last_fte is not None else None\n",
+    "\n",
+    "    output_records.append(record)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 6. Build dataframe, sort and save\n",
+    "# -------------------------\n",
+    "out_df = pd.DataFrame(output_records)\n",
+    "\n",
+    "# Sorting order\n",
+    "sort_cols = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
+    "]\n",
+    "# Ensure sort columns exist in dataframe\n",
+    "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
+    "out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
+    "\n",
+    "# Save to Excel next to input file\n",
+    "out_file = os.path.join(\n",
+    "    os.path.dirname(file_path),\n",
+    "    f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
+    ")\n",
+    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "\n",
+    "print(f\"✅ ADWP Output written to: {out_file}\")\n",
+    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c6a7ea42",
    "metadata": {},
    "outputs": [],
