--- a/CT.ipynb
+++ b/CT.ipynb
@@ -2,6 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ab4c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import win32com.client as win32\n",
+    "from tkinter import Tk, filedialog\n",
+    "\n",
+    "def paste_values_and_cleanup_save_as():\n",
+    "    # Ask user to select folder\n",
+    "    Tk().withdraw()\n",
+    "    source_folder = filedialog.askdirectory(title=\"Select Folder Containing Excel Files\")\n",
+    "\n",
+    "    if not source_folder:\n",
+    "        print(\"No folder selected. Exiting.\")\n",
+    "        return\n",
+    "\n",
+    "    # Create output folder\n",
+    "    parent_dir = os.path.dirname(source_folder)\n",
+    "    folder_name = os.path.basename(source_folder)\n",
+    "    output_folder = os.path.join(parent_dir, f\"{folder_name}_PV\")\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "    # Launch Excel\n",
+    "    excel = win32.gencache.EnsureDispatch('Excel.Application')\n",
+    "    excel.Visible = False\n",
+    "    excel.DisplayAlerts = False  # Suppress prompts\n",
+    "\n",
+    "    for filename in os.listdir(source_folder):\n",
+    "        if filename.endswith('.xlsx'):\n",
+    "            source_path = os.path.join(source_folder, filename)\n",
+    "            name_part = os.path.splitext(filename)[0]\n",
+    "            output_filename = f\"{name_part}_PV.xlsx\"\n",
+    "            output_path = os.path.join(output_folder, output_filename)\n",
+    "\n",
+    "            print(f\"Processing: {filename}\")\n",
+    "\n",
+    "            wb = excel.Workbooks.Open(source_path)\n",
+    "\n",
+    "            # Paste values in each worksheet\n",
+    "            for ws in wb.Worksheets:\n",
+    "                ws.UsedRange.Value = ws.UsedRange.Value  # Paste values safely\n",
+    "\n",
+    "            # Delete unwanted sheets if they exist\n",
+    "            for sheet_name in ['Data', 'Date']:\n",
+    "                try:\n",
+    "                    wb.Worksheets(sheet_name).Delete()\n",
+    "                except Exception:\n",
+    "                    pass  # Sheet does not exist\n",
+    "\n",
+    "            # Clear any copy mode / selection\n",
+    "            excel.CutCopyMode = False\n",
+    "\n",
+    "            # Save copy to output folder\n",
+    "            wb.SaveCopyAs(output_path)\n",
+    "            wb.Close(SaveChanges=False)\n",
+    "\n",
+    "    excel.Quit()\n",
+    "    print(f\"✅ All processed files saved to: {output_folder}\")\n",
+    "\n",
+    "\n",
+    "# Run the function\n",
+    "if __name__ == \"__main__\":\n",
+    "    paste_values_and_cleanup_save_as()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a83577a1",
    "metadata": {},
