--- a/CT.ipynb
+++ b/CT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42759982",
+   "id": "5c0ae89a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +42,24 @@
     "\n",
     "            wb = excel.Workbooks.Open(source_path)\n",
     "\n",
-    "            # Paste values and set active cell for all sheets\n",
+    "            # Paste values safely and set active cell without using Select\n",
     "            for ws in wb.Worksheets:\n",
-    "                ws.UsedRange.Value = ws.UsedRange.Value  # Paste values safely\n",
-    "                ws.Range(\"B3\").Select()                   # Set active cell to B3\n",
+    "                ws.UsedRange.Value = ws.UsedRange.Value\n",
+    "                ws.ScrollRow = 3       # Ensures row 3 is visible when opening\n",
+    "                ws.ScrollColumn = 2    # Ensures column B is visible\n",
+    "                ws.Range(\"B3\").Activate()  # Sets B3 as the active cell without Select\n",
     "\n",
-    "            # Delete unwanted sheets if they exist\n",
+    "            # Delete unwanted sheets\n",
     "            for sheet_name in ['Data', 'Date']:\n",
     "                try:\n",
     "                    wb.Worksheets(sheet_name).Delete()\n",
     "                except Exception:\n",
-    "                    pass  # Sheet does not exist\n",
+    "                    pass\n",
     "\n",
-    "            # Set first sheet as the active sheet\n",
+    "            # Make first sheet active\n",
     "            wb.Sheets(1).Activate()\n",
     "\n",
-    "            # Clear any copy mode / selection\n",
+    "            # Clear any selection / copy mode\n",
     "            excel.CutCopyMode = False\n",
     "\n",
     "            # Save copy to output folder\n",
@@ -67,8 +69,6 @@
     "    excel.Quit()\n",
     "    print(f\"✅ All processed files saved to: {output_folder}\")\n",
     "\n",
-    "\n",
-    "# Run the function\n",
     "if __name__ == \"__main__\":\n",
     "    paste_values_and_cleanup_save_as()\n"
    ]
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ace342f",
+   "id": "8e27dea3",
    "metadata": {},
    "outputs": [],
    "source": [
